--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^20.2.0",
     "@fortawesome/fontawesome-free": "^7.0.1",
     "bootstrap": "^4.6.2",
+    "ngx-bootstrap": "^20.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
